testsuite/tests/typing-misc/wellfounded.ml.principal.reference

#     type _ prod = Prod : ('a * 'y) prod
#               Characters 87-96:
        type d = d * d
             ^^^^^^^^^
Error: The type abbreviation d is cyclic
# 
